Add Javadoc in Animation